# cra-tools

./: README.md
TimeScramble/: NOTES  Readme.rtf  TimeScramble.md  badDays.txt
TimeScramble/src/: CMakeLists.txt
TimeScramble/src/cmake/: FindROOT.cmake  config.cmake  numeric_version.cmake  tools.cmake
TimeScramble/src/include/: Sampling.h  SimpleTrigger.h  solardipole.h  units.h
TimeScramble/src/include/astro/: astro.h
TimeScramble/src/private/: SimpleDST.cc  TimeScramble.cc  checksd.cc  solardipole.cc  time.cxx  tsmc.cxx
TimeScramble/src/scripts/: maker.py  maker.py.in  missingFiles.py  missingFiles.py.in  public_maker.py  public_maker.py.in  purge.py  purge.py.in  submit_all.py  submit_all.py.in  test.py
TimeScramble/src/scripts/npx4/: eventCleaner.py  getTime.py  pysubmit.py  test.py  tsCleaner.py
TimeScramble/src/scripts/npx4/etc/: submit_npx4.py  submit_npx4.sh
iter-lhreco/: README.md
iter-lhreco/src/: CMakeLists.txt
iter-lhreco/src/cmake/: FindCFITSIO.cmake  FindHEALPIX.cmake  FindHEALPIX.cmake.disabled  FindROOT.cmake  config.cmake
iter-lhreco/src/examples/: multi.py
iter-lhreco/src/include/iter-lhreco-proj/: illh-utils.h  pickle.h
iter-lhreco/src/private/: illh-reco.cc  illh-utils.cc  multi-llh.cc  pickle.cc
iter-lhreco/src/scripts/: LHreco.py  combinator.sh  concatenatepasses.sh  dipole-strength-theory.py  dipole-strength.py  dipole-strength2.py  dipole-strength3.py  dipole-strength4.py  fake-maps-dipoles.py  fake-maps-gaussians.py  fake-maps-markus-dipoles.py  fake-maps.py  gaussian-strength.py  illh-reco.py.in  lhsignificance.py  significance.py  smoothed-maps.py
iter-lhreco/src/src/: multi-llh.cc  reconstruct.cc  significance.cc
scripts/: cratools.py  isotropy.py  multiLH.py  poisson.py  powerspectrum.py  submit.py  submit_poisson.py
simpledst-maps/src/: CMakeLists.txt  LinkDef.h  README.txt  env-shell.sh.in
simpledst-maps/src/cmake/: FindASTRO.cmake  FindGSL.cmake  FindHEALPIX.cmake  FindHEALPIX.cmake.disabled  FindPAL.cmake  FindPHOTOSPLINE.cmake  env-check.sh.in  env-shell.sh.in  pretty.cmake
simpledst-maps/src/examples/: reconstruct.cc  significance.cc
simpledst-maps/src/include/: Direction.h  LaputopSmall.h  NStations.h  Position.h  SimpleDST.h  TDST.h  config.h  cuts.h  histogram.h  solardipole.h  units.h
simpledst-maps/src/include/astro/: time.h
simpledst-maps/src/include/iter-lhreco/: config.h  illh-utils.h
simpledst-maps/src/private/: Direction.cxx  Laputop.cc  LaputopSmall.cc  NStations.cc  Position.cxx  ShowerPlane.cc  SimpleDST.cc  SimpleTrigger.cc  TDST.cxx  TimeScramble.cc  TimeScrambleLowMem.cc  astro.cxx  checksd.cc  config.cxx  cuts.cc  cuts.h  dstcut.cc  esplines.cc  esplines.h  fitd.cc  fitq.cc  get_azimuth.cc  illh-utils.cc  make-energy-histos.cc  make-hawc-mc-map.cc  make-local-maps.cc  make-random-local-maps.cc  make-sidereal-maps.cc  miniDST.C  multi-llh.cc  pickle.cc  solardipole.cc  splinechk.cc
simpledst-maps/src/private/iter-lhreco/: illh-significance.cc
simpledst-maps/src/private/util/: cnpy.cc
simpledst-maps/src/resources/: ICECUBE.json  ICETOP.json  detectors.json  icetop.json
simpledst-maps/src/run_all/tier1/: tier1.sh
simpledst-maps/src/run_all/tier2/: on_hold.sh  tier2.sh
simpledst-maps/src/run_all/tier3/: tier3.sh
simpledst-maps/src/run_all/tier4/: tier4.sh
simpledst-maps/src/run_burnsample/tier1/: tier1.sh
simpledst-maps/src/run_burnsample/tier2/: tier2.sh
simpledst-maps/src/run_burnsample/tier3/: tier3.sh
simpledst-maps/src/run_burnsample/tier4/: tier4.sh
simpledst-maps/src/scripts/: 2sub.sub  LHreco.py  combine-local-maps.py.in  combine-sidereal-maps.py  combinemaps.py  combinemultiplemaps.py  env-shell.sh  make-fake-maps.py  make-local-maps-IT.py.in  make-local-maps.py  make-local-maps.py.in  make-sidereal-maps.py  makemaps.py  maker.py.in  merge-reco.py.in  multiLH-copy.py  multiLH.py  multiLHsmall.py  public_maker.py.in  setup.sh  significance.py  small.py  submit.sh  submit_all.py.in
simpledst-maps/src/scripts/npx4/: cleaner.py  pysubmit.py
simpledst-maps/src/scripts/npx4/etc/: map-eliminate.py
simpledst-maps/src/src/: SimpleDST.cc  TimeScramble.cpp  combine-local-maps.cc  esplines.cc  esplines.h  get_azimuth.cc  make-hawc-mc-map.cc  make-local-maps.cc  make-random-local-maps.cc  make-sidereal-maps.cc
